--- a/style.css
+++ b/style.css
@@ -30,6 +30,11 @@ h1 {
     font-size: 20px;
 }
 
+.tab {
+    cursor: pointer;
+    padding-bottom: 5px;
+}
+
 .tabs span {
     cursor: pointer;
     padding-bottom: 5px;
